--- a/handlers-seq.yml
+++ b/handlers-seq.yml
@@ -1,5 +1,7 @@
 - name: Play to illustrate order of execution
   hosts: localhost
+    #become: true
+    #gather_facts: false
   
   roles:
   - role1
